language/tests/regent/compile_fail/specialize_task_param_list_nonsymbol.rg
-- Copyright 2023 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- specialize_task_param_list_nonsymbol.rg:23: param list contains non-symbol
-- task f([a]) : int
--        ^

import "regent"

local a = terralib.newlist({123})
task f([a]) : int
end
f:compile()
